# 42_call-me-maybe

./: .gitignore  Makefile  README.md  functions_definition.json  main.py  main_test.py  pyproject.toml
.github/workflows/: lint.yml
data/input/: function_calling_tests.json  functions_definition.json  test_definiton.json  tests.json
data/output/: function_calls.json
docs/draw.io/: Overview.drawio.xml  output-sig.drawio
llm_sdk/: __init__.py
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py
src/dev/: uni.py
src/fsm/: bak  fsm.py  functions_definition.json
src/instruction/: llm_instruction.py
src/loader/: loader.py
src/output_sig/: output_sig_loader.py
