[project]
name = "example"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = []

# [build-system]
# requires = ["hatchling"]  # the tool that build .whl
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/example"]

[tool.mypy]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"
plugins = []

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]