[project]
name = "Call-me-maybe"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "jsonschema>=4.26.0",
    "numpy>=2.2.6",
    "pydantic>=2.13.4",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.20.0",
    "accelerate>=1.14.0",
]

[tool.mypy]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"
plugins = []

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0"
]
